Bug 863891 - Eliminate warnings by not reusing the *_MIN constants to implement the indefinite integer value.  r=jandem

--HG--
extra : rebase_source : 976c96bd0e2fda121bf48c057954aef12f6d096a